demos/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - hosts: <TODO> 
    http:
      paths:
      - path: /guest
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
